Spacing Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -147,7 +147,7 @@ button:hover {
   }
 
   .form-container {
-    padding-bottom: 50px;
+    padding-bottom: 40px;
   }
 
   .chat-container {
